hphp/test/quick/call12.php.expectf
HipHop Fatal error: Call to undefined method A::foo from context B in %s on line 10
